fix(search): on small screens

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -93,30 +93,6 @@ $header-toggle-btn-width: 50px;
   }
 }
 
-@media (max-width: $screen-xs-max) {
-  .header__search_wrap {
-    width: calc(100% - #{$header-logo-size + $header-toggle-btn-width + 40px});
-    position: absolute;
-    top: 0;
-  }
-
-  .navbar-form {
-    padding-left: 0;
-    padding-right: 0;
-    margin-bottom: 0;
-    margin-top: 0;
-    .form-group {
-      margin-bottom: 0;
-    }
-    box-shadow: none;
-    border: 0;
-  }
-
-  .header__logo_text {
-    display: none !important;
-  }
-}
-
 .header__search_input {
   border: 0;
   background: rgba(255, 255, 255, 0.4);
@@ -448,15 +424,6 @@ $slogan-animation-offset-mobile: 400px;
   margin-top: 100px;
 }
 
-@media (max-width: $screen-xs-max) {
-  .search__content {
-    margin-top: 150px;
-  }
-
-  .navbar--fixed {
-    width: 100%;
-  }
-}
 
 $search-filter-panel-width: 250px;
 $search-filter-panel-gap: 40px;
@@ -473,8 +440,54 @@ $search-filter-panel-gap: 40px;
   width: calc(100% - #{$search-filter-panel-width});
   // margin-left: $search-filter-panel-width;
 }
+
 .search__filter_panel_wrap {
   float: right;
   width: $search-filter-panel-width;
 }
 
+
+@media (max-width: $screen-xs-max) {
+  .header__search_wrap {
+    margin-left: $header-logo-size + 10px;
+    width: calc(100% - #{$header-logo-size + $header-toggle-btn-width + 40px});
+    position: absolute;
+    top: 0;
+  }
+
+  .navbar-form {
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 0;
+    margin-top: 0;
+    .form-group {
+      margin-bottom: 0;
+    }
+    box-shadow: none;
+    border: 0;
+  }
+
+  .header__logo_text {
+    display: none !important;
+  }
+
+  .navbar--fixed {
+    width: 100%;
+  }
+
+  
+  .search__filter_panel_wrap {
+    position: absolute;
+  }
+}
+
+@media (max-width: $screen-xs-min) {
+  .search__results {
+    float: none;
+    width: initial;
+  }
+
+  .search__filter_panel_wrap {
+    display: none;
+  }
+}
